--- a/index.html
+++ b/index.html
@@ -388,9 +388,8 @@
     </footer>
 
 
-
+    <script src="/js/script.js"></script>
     <script src="https://forms.app/static/embed.js" type="text/javascript" async defer onload="new formsapp('65cb529751206f3b32d884f0', 'popover', {'button':{'color':'#ff9e24'},'align':'right'});"></script>
-    <script src="js/script.js"></script>
     <script src="path/to/flickity.pkgd.min.js"></script>
     <script>
         document.getElementById('contact-form').addEventListener('submit', function(event) {
